<resources>
    <string name="app_name">kotlinSportProject</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_note_list">Note List</string>
    <string name="label_note_detail">Note Detail</string>
    <string name="label_add_note">Add Note</string>
    <string name="label_edit_note">Edit Note</string>
    <string name="label_delete_note">Confirm Delete Note</string>
    <string name="label_search_notes">Search Notes</string>
    <string name="notes_not_found">No notes found</string>
    <string name="note_detail_id">id: %s</string>
    <string name="note_detail_text">text: %s</string>
    <string name="error_loading_note">Error loading note</string>
    <string name="add_note_hint">add note</string>
    <string name="error_validating_note">Invalid text</string>
    <string name="edit_note_button_text">Edit</string>
    <string name="edit_note_hint">edit note</string>
    <string name="delete_note_button_text">Delete</string>
    <string name="cancel_delete_button_text">Cancel</string>
    <string name="confirm_delete_button_text">Confirm Delete</string>
    <string name="error_deleting_note">Error deleting note</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="bb_search_related_title">您想搜的是不是</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_list">分析</string>
    <string name="title_detail">赛事</string>
    <string name="title_me">我的</string>


    <string name="cms_card_content_open">展开</string>
    <string name="cms_card_content_close">收起</string>

    <string name="analysis_run_step">跑步里程</string>
    <string name="analysis_step">步数</string>
    <string name="analysis_heart">热量</string>
    <string name="analysis_weight">体重</string>

    <string name="pedo_main_hint_text">今天走了%1$d步，约消耗了%2$d杯可乐的热量</string>
    <string-array name="select_image_dialog_items">
        <item>Take photo</item>
        <item>Choose Exsiting Photo</item>
    </string-array>
    <string name="pedo_me_step">排行榜</string>
    <string name="pedo_me_friend">好友</string>
    <string name="pedo_me_activity">活动</string>
    <string name="pedo_me_collect">收藏</string>
    <string name="pedo_me_setting">个性设置</string>

    <string name="topic_index_1">1</string>
    <string name="topic_index_2">2</string>
    <string name="topic_index_3">3</string>
    <string name="topic_index_4">4</string>

    <string name="topic_string_1">#粽步向前#</string>
    <string name="topic_string_2">#我的儿时梦想#</string>
    <string name="topic_string_3">#端午节龙舟加油赛#</string>
    <string name="topic_string_4">#爱上运动的理由#</string>


    <string name="hot_topic_name_1">团队印花挑战赛</string>
    <string name="hot_topic_description_1">团队印花越多，红包越大</string>
    <string name="hot_topic_attend_1">132324人参与</string>

    <string name="hot_topic_name_2">3V3小团队PK赛</string>
    <string name="hot_topic_description_2">多人组队PK，精彩刺激</string>
    <string name="hot_topic_attend_2">132324人参与</string>
    <string name="chat_cancel">取消</string>
    <string name="chat_search">搜索</string>
    <string name="title_home">运动</string>
    <string name="refresh">刷新</string>

    <string name="step_target">目标步数</string>
    <string name="set_gender">设置性别</string>
    <string name="set_height">设置身高</string>
    <string name="set_weight">设置体重</string>
    <string name="pedometer_calory_kilo_unit">Cal</string>

</resources>
