<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:paddingTop="16dp"
              >
    <LinearLayout
        android:id="@+id/topic_list_left_container"
        android:layout_marginEnd="10dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:divider="@drawable/topic_list_divider"
        android:orientation="vertical"
        android:showDividers="middle"
      >
        <com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            app:topicContent="@string/topic_string_1"
            app:isFire="true"
            app:topicIndex="@string/topic_index_1"
            ></com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView>

        <com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            app:topicContent="@string/topic_string_3"
            app:isFire="false"
            app:topicIndex="@string/topic_index_3"
            ></com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView>

    </LinearLayout>
    <View
        android:id="@+id/topic_list_center_divider"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_height="match_parent"
        android:layout_width="0.5dp"
        android:background="#e5e5e5"/>
    <LinearLayout
        android:id="@+id/topic_list_right_container"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_height="match_parent"
        android:divider="@drawable/topic_list_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        >
        <com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            app:topicContent="@string/topic_string_2"
            app:isFire="false"
            app:topicIndex="@string/topic_index_2"
            ></com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView>

        <com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView
            android:layout_width="match_parent"
            android:layout_height="26dp"
            app:topicContent="@string/topic_string_4"
            app:isFire="false"
            app:topicIndex="@string/topic_index_4"
            ></com.nick.apps.pregnancy11.mypedometer.fragment.view.PedoTopicView>
    </LinearLayout>
</LinearLayout>